--- a/php-webdriver/composer.json
+++ b/php-webdriver/composer.json
@@ -1,6 +1,6 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "4.*",
         "facebook/webdriver": "dev-master"
     }
 }
