use old versions of things that work with both each other and php7

--- a/saucelabs/php/composer.json
+++ b/saucelabs/php/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "sauce/sausage": ">=0.15.2"
+        "sauce/sausage": "0.17.*",
+        "phpunit/phpunit": "^5"
     }
 }
