--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,16 +1,14 @@
 {
   "name": "puppeteer-wp",
   "version": "1.0.0",
-  "description": "Puppeteer and Wonder Proxy integration",
-  "main": "index.js",
+  "description": "Puppeteer and WonderProxy integration",
   "scripts": {
-    "test": "mocha"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
+    "jest": "^27.2.1",
     "puppeteer": "^10.2.0"
   }
 }
