--- a/saucelabs/php/composer.json
+++ b/saucelabs/php/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "sauce/sausage": "0.17.*",
-        "phpunit/phpunit": "^5"
+        "php-webdriver/webdriver": "^1",
+        "phpunit/phpunit": "^9"
     }
 }
