update saucelabs demos
- pull abandoned sausage lib and use the regular selenium webdriver
- add playwright because it's so much better
- use tokens instead of passwords for creds

--- a/saucelabs/php/composer.json
+++ b/saucelabs/php/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "php-webdriver/webdriver": "^1",
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "brianium/paratest": "^6.4"
     }
 }
