--- a/selenium/php/composer.json
+++ b/selenium/php/composer.json
@@ -1,6 +1,6 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^5.0",
-        "facebook/webdriver": "^1.0"
+        "php-webdriver/webdriver": "^1"
     }
 }
